--- a/select.html
+++ b/select.html
@@ -70,12 +70,12 @@ h1 {
     <div class="card" onclick="location.href='/DMO/index.html'">
       <img src="IMG/metech.png" alt="메청/고스트 키링">
       <h2>메청 장비 & 고스트 키링</h2>
-      <p>메청 장비와 고스트 키링 강화 기대값 계산</p>
+      <p>메청 장비, 고스트 키링 강화 기대값 계산</p>
     </div>
     <div class="card" onclick="location.href='/DMO/optionSimul.html'">
       <img src="IMG/dungeon.png" alt="상위 던전 장비">
       <h2>상위 던전 장비</h2>
-      <p>상위 던전 장비 옵션 변경 시뮬레이션 + 기대값 계산</p>
+      <p>상위 던전 장비 옵션 변경 시뮬레이션, 기대값 계산</p>
     </div>
   </div>
 </div>
