--- a/select.html
+++ b/select.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
 <meta charset="UTF-8">
-<title>DMO 시뮬레이터 선택</title>
+<title>유키 길드 DMO Tools</title>
 <style>
 body {
   margin:0;
