--- a/select.html
+++ b/select.html
@@ -65,7 +65,7 @@ h1 {
 <body>
 
 <div>
-  <h1>DMO 시뮬레이터 선택</h1>
+  <h1>유키 길드 DMO Tools 선택</h1>
   <div class="container">
     <div class="card" onclick="location.href='/DMO/index.html'">
       <img src="IMG/metech.png" alt="메청/고스트 키링">
