--- a/select.html
+++ b/select.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <title>유키 길드 DMO Tools</title>
 <style>
+/* 기본 스타일 */
 body {
   margin:0;
   padding:0;
@@ -15,6 +16,8 @@ body {
   background: linear-gradient(135deg, #071126, #0f1f33);
   overflow:hidden;
   color:#fff;
+  position: relative;
+  z-index: 1;
 }
 h1 {
   text-align:center;
@@ -27,6 +30,8 @@ h1 {
   gap:40px;
   flex-wrap:wrap;
   justify-content:center;
+  position: relative;
+  z-index: 2;
 }
 .card {
   background: rgba(255,255,255,0.05);
@@ -60,9 +65,35 @@ h1 {
   font-size:0.95em;
   color:#cfe3ff;
 }
+
+/* 떠다니는 길드 마크 */
+#floatingMarks {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  overflow: hidden;
+  z-index: 0; /* 카드 뒤 */
+}
+.floatingMark {
+  position: absolute;
+  width: 60px;
+  height: 60px;
+  opacity: 0.5;
+  animation: floatAnim linear infinite;
+}
+@keyframes floatAnim {
+  0% { transform: translateY(100vh) translateX(0) rotate(0deg); opacity:0; }
+  10% { opacity:0.6; }
+  100% { transform: translateY(-100px) translateX(var(--x)) rotate(360deg); opacity:0; }
+}
 </style>
 </head>
 <body>
+
+<div id="floatingMarks"></div> <!-- 떠다니는 마크 -->
 
 <div>
   <h1>유키 길드 DMO Tools 선택</h1>
@@ -79,6 +110,31 @@ h1 {
     </div>
   </div>
 </div>
+
+<script>
+// 떠다니는 길드 마크 생성
+const markCount = 15; // 마크 갯수
+const container = document.getElementById("floatingMarks");
+
+for(let i=0; i<markCount; i++){
+  const img = document.createElement("img");
+  img.src = "IMG/guild_mark.png"; // 길드 마크 PNG
+  img.className = "floatingMark";
+  
+  const x = Math.random() * window.innerWidth;
+  img.style.setProperty('--x', (Math.random()*200-100)+'px'); // 좌우 흔들림
+  img.style.left = x + "px";
+  
+  const duration = 20 + Math.random()*10; // 20~30초
+  img.style.animationDuration = duration + "s";
+  
+  const scale = 0.5 + Math.random()*0.7;
+  img.style.width = 60*scale + "px";
+  img.style.height = 60*scale + "px";
+  
+  container.appendChild(img);
+}
+</script>
 
 </body>
 </html>
