--- a/select.html
+++ b/select.html
@@ -26,7 +26,7 @@ body::before {
   left: 50%;
   width: 600px;        /* 원하는 크기로 조절 */
   height: 600px;
-  background: url('IMG/guild_mark.png') no-repeat center center;
+  background: url('IMG/guild.png') no-repeat center center;
   background-size: contain;
   transform: translate(-50%, -50%);
   opacity: 0.1;       /* 희미하게 표시 */
