--- a/select.html
+++ b/select.html
@@ -24,12 +24,12 @@ body::before {
   position: fixed;
   top: 50%;
   left: 50%;
-  width: 1000px;        /* 원하는 크기로 조절 */
+  width: 1000px;
   height: 1000px;
   background: url('IMG/guild.png') no-repeat center center;
   background-size: contain;
   transform: translate(-50%, -50%);
-  opacity: 0.7;       /* 희미하게 표시 */
+  opacity: 0.7;
   z-index: 0;
 }
 
@@ -37,10 +37,11 @@ h1 {
   text-align:center;
   margin-bottom:40px;
   font-size:3em;
-  text-shadow: 2px 2px 10px rgba(0,0,0,0.7);
+  text-shadow: 3px 3px 15px rgba(0,0,0,0.8);
   position: relative;
   z-index: 1;
 }
+
 .container {
   display:flex;
   gap:40px;
@@ -49,23 +50,26 @@ h1 {
   position: relative;
   z-index: 1;
 }
+
 .card {
-  background: rgba(255,255,255,0.05);
+  background: rgba(0,0,0,0.7);  /* 카드 배경 진하게 */
   border-radius:20px;
   padding:40px 30px;
   width:280px;
   text-align:center;
   cursor:pointer;
   transition: transform 0.3s, background 0.3s, box-shadow 0.3s;
-  box-shadow: 0 6px 20px rgba(0,0,0,0.5);
+  box-shadow: 0 10px 30px rgba(0,0,0,0.8); /* 그림자 강화 */
   position: relative;
   z-index: 1;
 }
+
 .card:hover {
   transform: translateY(-10px) scale(1.05);
-  background: rgba(127, 191, 255, 0.15);
-  box-shadow: 0 12px 28px rgba(0,0,0,0.7);
+  background: rgba(0,0,0,0.85); /* 호버시 더 진하게 */
+  box-shadow: 0 15px 40px rgba(0,0,0,0.9);
 }
+
 .card img {
   width:100px;
   margin-bottom:20px;
@@ -74,14 +78,18 @@ h1 {
 .card:hover img {
   transform: scale(1.2);
 }
+
 .card h2 {
   margin-bottom:10px;
-  font-size:1.4em;
+  font-size:1.5em;
   color:#7ddcff;
+  text-shadow: 2px 2px 6px rgba(0,0,0,0.9); /* 글자 그림자 추가 */
 }
+
 .card p {
-  font-size:0.95em;
+  font-size:1em;
   color:#cfe3ff;
+  text-shadow: 1px 1px 4px rgba(0,0,0,0.8); /* 설명 글자 그림자 */
 }
 </style>
 </head>
