--- a/select.html
+++ b/select.html
@@ -26,7 +26,7 @@ body::before {
   left: 50%;
   width: 1000px;
   height: 1000px;
-  background: url('IMG/guild.png') no-repeat center center;
+  background: url('IMG/guild_mark.png') no-repeat center center;
   background-size: contain;
   transform: translate(-50%, -50%);
   opacity: 0.7;
