--- a/optionSimul.html
+++ b/optionSimul.html
@@ -45,10 +45,10 @@ img.equip-img { max-width:120px; margin-bottom:10px; border-radius:8px; border:1
 <hr style="margin:10px 0; border-color:rgba(255,255,255,0.04)">
 
 <!-- 상단: 옵션 변경 -->
-<h3>옵션 변경 (리롤용)</h3>
+<h3>옵션 변경(시뮬레이터)</h3>
 <div class="row">
   <div class="col">
-    <button class="primary" onclick="rerollUnlocked()">비잠금 슬롯 리롤</button>
+    <button class="primary" onclick="rerollUnlocked()">옵션 리롤</button>
     <button class="secondary" onclick="resetAll()">모두 초기화</button>
   </div>
   <div class="col" id="totalStoneBox">총 옵션 변경 스톤 사용량: 0개</div>
