--- a/optionSimul.html
+++ b/optionSimul.html
@@ -99,13 +99,19 @@ const EQUIP_OPTIONS = {
     "공격속도":1, "치명피해":1, "기본속성피해":2, "스킬피해":1,
     "공격력(%)":1, "방어력(%)":1, "최대HP증가(%)":1, "최대DS증가(%)":1
   }
+  "찬란한 희망의 반지": {
+    "최대체력":2, "디지소울":2, "방어력":2, "크리티컬":2,
+    "공격력":2, "치명피해":2, "기본속성피해":2, "스킬피해":2,
+    "방어력(%)":2, "최대DS증가(%)":2, "회피율":2, "블록율":2, "적중도":2
+}
 };
 
 // 장비 → 영어 이미지 파일명 매핑
 const EQUIP_IMAGE_MAP = {
   "바이탈 브레스 디지바이스 V": "VitalBreathDeviceV.png",
   "화려한 친절의 이어링": "FancyEarring.png",
-  "찬란한 기적의 넥클레스": "MiracleNecklace.png"
+  "찬란한 기적의 넥클레스": "MiracleNecklace.png",
+  "찬란한 희망의 반지": "MiracleRing.png"
 };
 
 let currentEquip = "바이탈 브레스 디지바이스 V";
